--- a/src/Components/Carousel/carousel.css
+++ b/src/Components/Carousel/carousel.css
@@ -1,3 +1,49 @@
 .swiper-button-prev{
     visibility: hidden;
 }
+.swiper-button-next{
+    color: white !important;
+    margin-right: 10rem;
+    transform: scale(1.3);
+}
+.swiper-pagination-bullet{
+    background: rgb(255, 255, 255) !important;
+    height: 5px !important;
+    width: 1.4rem !important;
+    border-radius: 0% !important;
+}
+.swiper-pagination-bullet-active{
+    background-color: rgb(239, 31, 31) !important;
+}
+.slideimg1{
+    background: url(../Imgs/marvel-1.jpg) center/cover no-repeat;
+    width: 100%;
+    height: 36rem;
+}
+.slideimg2{
+    background: url(../Imgs/marvel-2.jpg) center/cover no-repeat;
+    width: 100%;
+    height: 36rem;
+}
+.slideimg3{
+    background: url(../Imgs/marvel-3.jpg) center/cover no-repeat;
+    width: 100%;
+    height: 36rem;
+}
+.slideimg4{
+    background: url(../Imgs/marvel-4.jpg) center/cover no-repeat;
+    width: 100%;
+    height: 36rem;
+}
+.slideimg5{
+    background: url(../Imgs/marvel-5.jpg) center/cover no-repeat;
+    width: 100%;
+    height: 36rem;
+}
+.btn-shape {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    clip-path: polygon(92% 0, 100% 25%, 100% 100%, 8% 100%, 0% 75%, 0 0);
+}
