--- a/src/Components/Carousel/carousel.css
+++ b/src/Components/Carousel/carousel.css
@@ -11,34 +11,35 @@
     height: 5px !important;
     width: 1.4rem !important;
     border-radius: 0% !important;
+    margin-bottom: 1.8rem !important;
 }
 .swiper-pagination-bullet-active{
     background-color: rgb(239, 31, 31) !important;
 }
 .slideimg1{
-    background: url(../Imgs/marvel-1.jpg) center/cover no-repeat;
+    background: url(../Imgs/marvel-1.jpg) no-repeat;
     width: 100%;
-    height: 36rem;
+    height: 35.6rem;
 }
 .slideimg2{
-    background: url(../Imgs/marvel-2.jpg) center/cover no-repeat;
+    background: url(../Imgs/marvel-2.jpg) no-repeat;
     width: 100%;
-    height: 36rem;
+    height: 35.6rem;
 }
 .slideimg3{
-    background: url(../Imgs/marvel-3.jpg) center/cover no-repeat;
+    background: url(../Imgs/marvel-3.jpg) no-repeat;
     width: 100%;
-    height: 36rem;
+    height: 35.6rem;
 }
 .slideimg4{
-    background: url(../Imgs/marvel-4.jpg) center/cover no-repeat;
+    background: url(../Imgs/marvel-4.jpg) no-repeat;
     width: 100%;
-    height: 36rem;
+    height: 35.6rem;
 }
 .slideimg5{
-    background: url(../Imgs/marvel-5.jpg) center/cover no-repeat;
+    background: url(../Imgs/marvel-5.jpg) no-repeat;
     width: 100%;
-    height: 36rem;
+    height: 35.6rem;
 }
 .btn-shape {
     display: flex;
